php5e.yaml
apiVersion: apps/v1 # Usa apps/v1beta2 para versiones anteriores a 1.9.0
kind: Deployment
metadata:
  name: php5
spec:
  selector:
    matchLabels:
      app: php
  replicas: 1 # indica al controlador que ejecute 2 pods
  template:
    metadata:
      labels:
        app: php
    spec:
      containers:
        - name: php
          image: pag66/php5-demoe
          ports:
            - containerPort: 80
